# scaling-kanban-prototype

./: .env  .env.demo  Readme.md  docker-compose.yml  run-demo.sh  run-development.sh
backend/: .gitignore  Cargo.toml  Dockerfile  drop_mongodb.sh  open_mongosh.sh  reset_db.sh
backend/src/: connection.rs  main.rs  misc.rs
backend/src/boards/: get_boards.rs  get_boards_id.rs  mod.rs  post_boards.rs  put_boards_id.rs
backend/static/: board.html
frontend/: .dockerignore  .env.development  .eslintrc  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Board.css  Board.tsx  BoardList.css  BoardList.tsx  BoardSelector.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  RenameInput.css  RenameInput.tsx  Task.css  Task.tsx  TaskList.css  TaskList.tsx  TaskListGenerator.css  TaskListGenerator.tsx  UseStickyState.tsx  index.tsx  types.ts  useStateCallback.tsx
