[package]
name = "kanban-backend"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Schwarz"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["full"] }
mongodb = "2.4"
