[package]
name = "kanban-backend"
version = "0.2.0"
edition = "2021"
authors = ["Lukas Schwarz"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.22", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.28"
clap = { version = "4.1", features = ["derive", "env"] }
mongodb = "2.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "2.3.1"
